Bijayini | #2177 | endtb patient summary print data overlap in table UI fix-- issue 3

--- a/ui/app/styles/clinical/_patientDashboard.scss
+++ b/ui/app/styles/clinical/_patientDashboard.scss
@@ -886,8 +886,10 @@ table.pivot-table {
     .tabular-obs table {
       table-layout: fixed;
     }
-    .tabular-obs table tr td{
-      word-break: break-word;
+    .tabular-obs table tr {
+      td ,th{
+        word-break: break-word;
+      }
     }
   }
   .tabular-obs table tr td:first-child {
